Fixing timeline alignment

--- a/css/agency.css
+++ b/css/agency.css
@@ -425,7 +425,7 @@ header.masthead {
       height: 170px;
       margin-left: -85px; }
       .timeline > li .timeline-image h4 {
-        margin-top: 40px; }
+        margin-top: 35px; }
     .timeline > li.timeline-inverted > .timeline-panel {
       padding: 0 100px 20px 20px; } }
 
