--- a/scss/_timeline.scss
+++ b/scss/_timeline.scss
@@ -167,7 +167,7 @@
         height: 170px;
         margin-left: -85px;
         h4 {
-          margin-top: 40px;
+          margin-top: 35px;
         }
       }
       &.timeline-inverted > .timeline-panel {
